web_crowler_test

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ requests
 python-dateutil
 playwright  # For browser automation
 browser-use  # End-to-end agent framework
+chromium    # Headless browser for net crawling
